--- a/inner-page.html
+++ b/inner-page.html
@@ -9,49 +9,73 @@
     </head>
     <body class="inner-page">
         <header class="main-header">
-            <nav class="main-navigation">
-                <a class="main-header-logo" href="index.html">Device</a>
-                <p class="user-tools">
-                    <div class="user-tools__box">
-                        <form class="user-tools__form" action="https://echo.htmlacademy.ru" method="POST">
-                            <label class="visually-hidden" for="user-seach">Поиск по сайту</label>
-                            <input type="seach" name="seach" id="user-seach" placeholder="Поиск по сайту">
-                            <button class="user-tools__button" type="submit">Найти</button>
-                        </form>
-                    </div>
-                    <a class="user-tools__compare" href="compare.html">Сравнить</a>
-                    <a class="user-tools__cart" href="cart.html">Корзина</a>
-                </p>
-                <ul class="user-navigation">
-                    <li><a href="profile.html">Светлана Дурова</a></li>
-                    <li><a class="login-out" href="login-out.html">Выйти</a></li>
-                </ul>
-                <ul class="site-navigation">
-                    <li>
-                        <a href="catalog.html">Каталог товаров</a>
-                        <button class="catalog-open" type="button">Open</button>
-                        <ul class="site-navigation__catalog-list">
-                            <li class="site-navigation__catalog-item"><a href="#">Виртуальная реальность</a></li>
-                            <li class="site-navigation__catalog-item site-navigation__catalog-item-current"><a>Моноподы для селфи</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Экшн-камеры</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Фитнес-браслеты</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Умные часы</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Квадрокоптеры</a></li>
+            <div class=" container">
+                <div class="main-header-wrapper">
+                    <a class="main-header-logo" href="index.html">Device</a>
+                    <div class="user-tools">
+                        <div class="user-tools-item user-tools-box" >
+                            <form class="user-tools-form" action="https://echo.htmlacademy.ru" method="POST">
+                                <label class="visually-hidden" for="user-seach">Поиск по сайту</label>
+                                <input class="user-tools-seach" type="seach" name="seach" id="user-seach" placeholder="Поиск по сайту">
+                                <button class="user-tools-submit" type="submit">Найти</button>
+                            </form>
+                        </div>
+                        <ul class="user-tools-item user-menu">
+                            <li class="user-menu-item user-menu-name">
+                                <a class="name-link" href="profile.html">Светлана Дурова</a>
+                            </li>
+                            <li class="user-menu-item user-menu-logout">
+                                <a class="logout-link" href="logout.html">Выйти</a>
+                            </li>
+                            <li class="user-menu-item user-menu-login">
+                                <a class="login-link" href="login.html">Войти</a>
+                            </li>
                         </ul>
-                    </li>
-                    <li><a href="index.html#service-delivery">Доставка</a></li>
-                    <li><a href="index.html#service-warranty">Гарантия</a></li>
-                    <li><a href="index.html#contacts">Контакты</a></li>
-                </ul>
-            </nav>
+                        <a class="user-tools-item user-tools-compare" href="compare.html">Сравнить</a>
+                        <a class="user-tools-item user-tools-cart" href="cart.html">Корзина</a>
+                    </div>
+                    <nav class="main-navigation">
+                        <ul class="site-navigation">
+                            <li class="site-navigation__item site-navigation__catalog">
+                                <a href="catalog.html">Каталог товаров</a>
+                                <div class="site-navigation__catalog-list">
+                                    <p class="site-navigation__catalog-box">
+                                        <a class="site-navigation__catalog-item" href="#">Виртуальная реальность</a>
+                                        <a class="site-navigation__catalog-item" href="inner-page.html">Моноподы для селфи</a>
+                                        <a class="site-navigation__catalog-item" href="#">Экшн-камеры</a>
+                                    </p>
+                                    <p class="site-navigation__catalog-box">
+                                        <a class="site-navigation__catalog-item"href="#">Фитнес-браслеты</a>
+                                        <a class="site-navigation__catalog-item" href="#">Умные часы</a>
+                                    </p>
+                                    <p class="site-navigation__catalog-box">
+                                        <a class="site-navigation__catalog-item" href="#">Квадрокоптеры</a>
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="site-navigation__item site-navigation__delivery">
+                                <a href="#service-delivery">Доставка</a>
+                            </li>
+                            <li class="site-navigation__item site-navigation__warranty">
+                                <a href="#service-warranty">Гарантия</a>
+                            </li>
+                            <li class="site-navigation__item site-navigation__contacts">
+                                <a href="#contacts">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </header>
-        <main class="container">
-            <h1 class="page-title">Моноподы для селфи</h1>
-            <ul class="breadcrumbs">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог товаров</a></li>
-                <li class="breadcrumbs-current">Моноподы для селфи</li>
-            </ul>
+        <main class="main-index">
+            <div class="page-wrapper">
+                <h1 class="page-title">Моноподы для селфи</h1>
+                <ul class="breadcrumbs">
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="catalog.html">Каталог товаров</a></li>
+                    <li class="breadcrumbs-current">Моноподы для селфи</li>
+                </ul>
+            </div>
             <section class="filters">
                 <h2 class="visually-hidden">Фильтр товаров</h2>
                 <form class="filter" action="https://echo.htmlacademy.ru" method="GET" >
@@ -175,38 +199,39 @@
             </section>
         </main>
         <footer class="main-footer">
-            <div class="footer-top">
-                <span class="footer-logo">Device</span>
-                <ul class="footer-user-menu">
-                    <li>
-                        <a href="login.html">Войти</a>
-                    </li>
-                    <li>
-                        <a href="compare.html">Сравнить</a>
-                    </li>
-                    <li>
-                        <a href="cart.html">Корзина</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-middle">
-                <p class="footer-address">г. Москва, ул. Строителей, 15</p>
-                <ul class="footer-site-menu">
-                    <li><a href="index.html#service-delivery">Доставка</a></li>
-                    <li><a href="index.html#service-warranty">Гарантия</a></li>
-                    <li><a href="index.html#contacts">Контакты</a></li>
-                </ul>
-                <p class="phone">Тел.: +7 (495) 495-95-95</p>
-            </div>
-            <div class="footer-bottom">
-                <ul class="social-buttons">
-                    <li><a href="#" class="social-button-facebook">facebook</a></li>
-                    <li><a href="#" class="social-button-instagram">instagram</a></li>
-                    <li><a href="#" class="social-button-twitter">twitter</a></li>
-                </ul>
-                <p class="copyright">
-                    <a href="https://htmlacademy.ru"><span class="icon">html academy</span></a>
-                </p>
+            <div class="container">
+                <div class="footer-top">
+                    <a class="footer-logo" href="index.html">Device</a>
+                    <ul class="footer-user-menu">
+                        <li><a href="profile.html">Светлана Дурова</a></li>
+                        <li><a href="logout.html">Выйти</a></li>
+                        <li><a href="compare.html">Сравнить</a></li>
+                        <li><a href="cart.html">Корзина</a></li>
+                    </ul>                    
+                </div>
+                <div class="footer-middle">
+                    <p class="footer-address">г. Москва, ул. Строителей, 15</p>
+                    <ul class="footer-site-menu">
+                        <li><a href="#service-delivery">Доставка</a></li>
+                        <li><a href="#service-warranty">Гарантия</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
+                    </ul>
+                    <p class="phone">Тел.: +7 (495) 495-95-95</p>
+                </div>
+                <div class="footer-bottom">
+                    <ul class="social-buttons">
+                        <li><a href="#" class="social-button-facebook">facebook</a></li>
+                        <li><a href="#" class="social-button-instagram">instagram</a></li>
+                        <li><a href="#" class="social-button-twitter">twitter</a></li>
+                    </ul>
+                    <p class="copyright">
+                        <a href="https://htmlacademy.ru">
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+                            <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+                            </svg>
+                        </a>
+                    </p>
+                </div>
             </div>
         </footer>
     </body>
